index.htmlにgit restoreとgit resetコマンドの説明を追加

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>git tutorial</h1>
 <p>git status</p>
 <p>git diff</p>
+<p>新）git restore --staged index.html </p>
+<p>旧）git reset HEAD index.html</p>
