index.htmlにgit restoreとgit resetコマンドの詳細な説明を追加し、ワークツリーのファイルを元に戻す手順を明確化しました。

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<h1>git tutorial</h1>
-<p>git status</p>
-<p>git diff</p>
-<p>新）git restore --staged index.html </p>
-<p>旧）git reset HEAD index.html</p>
+# git tutorial
+- git status
+- git diff
+
+## 新）ステージングした変更を取り消す
+- git restore --staged filename 
+### ワークツリーのファイルを元に戻す
+- git restore filename
+
+### 旧）ステージングした変更を取り消す
+- git reset HEAD filename
+### ワークツリーのファイルを元に戻す
+- git checkout -- filename
