git commit --amendの注意点を追記

--- a/index.html
+++ b/index.html
@@ -14,3 +14,14 @@
 
 ## 直前のコミットをやり直す
 - git commit --amend
+### git commit --amendでできること
+- 直前のコミットメッセージを修正できる
+- 直前のコミットに変更を追加できる
+  - 追加の変更をステージングしてから--amendを実行
+  - 新しいコミットは作られず、直前のコミットが上書きされる
+
+### 注意点
+- プッシュ済みのコミットを--amendで修正すると、履歴が変わってしまう
+- 複数人で作業している場合は、プッシュ済みのコミットの--amendは避ける
+  - 他の開発者の作業に影響を与える可能性がある
+  - 必要な場合は、チームメンバーに事前に相談する
